@@ -3,8 +3,8 @@ package com.gregtechceu.gtceu.integration.map.layer.builtin;
 import com.gregtechceu.gtceu.api.material.ChemicalHelper;
 import com.gregtechceu.gtceu.api.material.material.Material;
 import com.gregtechceu.gtceu.api.tag.TagPrefix;
+import com.gregtechceu.gtceu.api.worldgen.OreVeinDefinition;
 import com.gregtechceu.gtceu.api.worldgen.ores.GeneratedVeinMetadata;
-import com.gregtechceu.gtceu.client.ClientInit;
 import com.gregtechceu.gtceu.data.material.GTMaterials;
 import com.gregtechceu.gtceu.config.ConfigHolder;
 import com.gregtechceu.gtceu.integration.map.GenericMapRenderer;
@@ -33,17 +33,17 @@ public class OreRenderLayer extends MapRenderLayer {
 
     public static MutableComponent getName(GeneratedVeinMetadata vein) {
         // noinspection ConstantValue IDK, it crashed
-        if (vein == null || vein.definition() == null ||
-                ClientInit.CLIENT_ORE_VEINS.inverse().get(vein.definition()) == null) {
+        if (vein == null || vein.definition() == null || vein.definition().unwrapKey().isEmpty()) {
             return Component.translatable("gtceu.minimap.ore_vein.depleted");
         }
-        return Component.translatable("gtceu.jei.ore_vein." + GTOreVeinWidget.getOreName(vein.definition()));
+        return Component.translatable(GTOreVeinWidget.getOreName(vein.definition()));
     }
 
     public static @NotNull Material getMaterial(@NotNull GeneratedVeinMetadata vein) {
         Material firstMaterial = null;
-        if (!vein.definition().indicatorGenerators().isEmpty()) {
-            var blockOrMaterial = vein.definition().indicatorGenerators().get(0).block();
+        OreVeinDefinition definition = vein.definition().value();
+        if (!definition.indicatorGenerators().isEmpty()) {
+            var blockOrMaterial = definition.indicatorGenerators().getFirst().block();
             firstMaterial = blockOrMaterial == null ? null : blockOrMaterial.map(
                     state -> {
                         var matStack = ChemicalHelper.getMaterialStack(state.getBlock());
@@ -52,7 +52,7 @@ public class OreRenderLayer extends MapRenderLayer {
                     Function.identity());
         }
         if (firstMaterial == null) {
-            firstMaterial = vein.definition().veinGenerator().getAllMaterials().get(0);
+            firstMaterial = definition.veinGenerator().getAllMaterials().getFirst();
         }
         return firstMaterial;
     }
@@ -65,7 +65,7 @@ public class OreRenderLayer extends MapRenderLayer {
         }
         tooltip.add(title);
 
-        for (var filler : vein.definition().veinGenerator().getAllEntries()) {
+        for (var filler : vein.definition().value().veinGenerator().getAllEntries()) {
             filler.getKey().ifLeft(state -> {
                 tooltip.add(Component.literal(ConfigHolder.INSTANCE.compat.minimap.oreNamePrefix)
                         .append(state.getBlock().getName()));
